// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxIcon Should render a check icon if isChecked is set to true 1`] = `
<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-check"
  fill="#FFF"
  height={24}
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    className="jsx-2416231148 jsx-3125355633"
    d="M6.5 12.5l4 4 8-8"
    fill="none"
    stroke="#FFF"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeMiterlimit="10"
    strokeWidth="1"
  />
</svg>
`;

exports[`CheckboxIcon Should render a loader if isLoading and isChecked are set to true 1`] = `
<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="kirk-icon kirk-icon-circle spinning"
    fill="#5DD167"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-2931153156"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`CheckboxIcon Should render a loader if isLoading is set to true 1`] = `
<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="kirk-icon kirk-icon-circle spinning"
    fill="#5DD167"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-2931153156"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`CheckboxIcon Should render an empty circle by default 1`] = `
<svg
  aria-hidden={true}
  className="kirk-icon kirk-icon-circle"
  fill="#00AFF5"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    className="jsx-2931153156"
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
</svg>
`;
